# editart

./: .env  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  config.rs  database.rs  lib.rs  main.rs
src-tauri/src/commands/: backup_commands.rs  client_commands.rs  clothes_commands.rs  impression_commands.rs  mod.rs  order_commands.rs  user_commands.rs
src-tauri/src/dto/: client_dto.rs  clothes_dto.rs  impression_dto.rs  mod.rs  order_dto.rs  user_dto.rs
src-tauri/src/models/: client.rs  clothes.rs  impression.rs  mod.rs  order.rs  user.rs
src-tauri/src/repositories/: client_repository.rs  clothes_repository.rs  impression_repository.rs  mod.rs  order_repository.rs  user_repository.rs
src-tauri/src/services/: client_service.rs  clothes_service.rs  impression_service.rs  mod.rs  order_service.rs  user_service.rs
src/components/: ClientForm.tsx  InvoicePrint.tsx
src/components/clients/: ClientSidePanel.tsx
src/components/impressions/: ImpressionCard.tsx  ImpressionList.tsx  ImpressionSummary.tsx  index.ts
src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
src/hooks/: useResponsiveWindow.ts
src/lib/: utils.ts
src/pages/: Clients.tsx  CreateClient.tsx  Home.tsx  ListClients.tsx  Login.tsx  OrderView.tsx  Orders.tsx  RegisterUser.tsx  Settings.tsx
src/stores/: clientStore.ts  impressionStore.ts  orderStore.ts
src/types/: auth.ts  client.ts  clothes.ts  impression.ts  order.ts
src/utils/: dateUtils.ts  windowUtils.ts
(+9 files in other folders)
